--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   formz: ^0.6.0
   # svg 图片
   flutter_svg: ^1.1.6
+  # 底部tab bar
+  persistent_bottom_nav_bar: ^5.0.2
+  # 提示框
+  fluttertoast: ^8.2.2
+  get: ^4.6.5
 
 
 dev_dependencies:
@@ -68,6 +73,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/images/navi/
     - assets/images/tabbar/
     - assets/images/
     - assets/
